# pucminas-mongodb-cassandra

./: README.md  pyproject.toml
mongodb_cassandra/: main.py  utils.py
mongodb_cassandra/data/: sample_restaurants.restaurants.json  sample_training.companies.json
mongodb_cassandra/processors/: sample_airbnb_listingsAndReviews.py  sample_restaurants_neighborhoods.py  sample_restaurants_restaurants.py  sample_training_companies.py  sample_training_posts.py
sql/: sample_airbnb.listingsAndReviews.sql  sample_restaurants.neighborhoods.sql  sample_restaurants.restaurants.sql  sample_training.companies.sql  sample_training.posts.sql
